# biscepter

./: LICENSE  README.md  go.mod  go.sum  main.go
.github/: FUNDING.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
api/: openapi.yml
cmd/: bisect.go  cleanup.go  root.go
configs/: job-config.yml
examples/: .gitignore  README.md
examples/api-multiple-python/: README.md  jobConf.yml  main.py  pyproject.toml
examples/api-single-python/: .gitignore  README.md  jobConf.yml  main.py  pyproject.toml
examples/pkg-broken-build/: .gitignore  README.md  jobConf.yml  main.go
examples/pkg-multiple/: README.md  jobConf.yml  main.go
examples/pkg-multiple-merge/: README.md  jobConf.yml  main.go
examples/pkg-single/: README.md  jobConf.yml  main.go
examples/simple-multiple/: main.go
examples/simple-single/: jobConf.yml  main.go
examples/simple-single-api-python/: main.py  pyproject.toml
internal/server/: http.go  server.go  websocket.go
pkg/biscepter/: commit.go  doc.go  healthcheck.go  healthcheck_test.go  job.go  job_integration_test.go  job_test.go  replica.go  replica_test.go
